package org.codefactory.team07.personalfinancialmanagement.domain.model;

public enum IncomeCategory {
    INGRESO_FIJO, INGRESO_EXTRA
}
